# FastAPIStructure

./: .dockerignore  .env.dev  .env.prod  .env.uta  .gitignore  ALEMBIC_SETUP.md  ARCHITECTURE.md  Dockerfile  POETRY_GUIDE.md  README.md  alembic.ini  config.py  dns.py  docker-compose.yml  mermaid-workflow.md  pyproject.toml  requirements.txt  run_consumer.py
.github/workflows/: build.yml
app/: main.py  tasks.py
app/api/common/: __init__.py
app/api/v1/: api.py
app/api/v1/endpoints/: dns.py
app/api/v2/: api.py
app/celery/: tasks.py
app/core/: celery_app.py  config.py  database.py  logging.py  secrets.py  security.py
app/kafka/: consumer.py
app/models/: models.py
app/models/migrations/: env.py  script.py.mako
app/routes/v1/: routes.py
app/routes/v2/: routes.py
app/schemas/: request.py  response.py
app/utils/: __init__.py
deployment/: Dockerfile.app  Dockerfile.worker  celery_worker_entrypoint.sh  docker-compose.yml  entrypoint.sh
tests/: test_api.py  test_dns.py  test_entrypoint_sh.sh
